# CircuitPython_CoAP

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.rst  optional_requirements.txt  pyproject.toml  requirements.txt  thing.py
.github/PULL_REQUEST_TEMPLATE/: adafruit_circuitpython_pr.md
circuitpython_coap/: __init__.py
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst  requirements.txt
docs/_static/: favicon.ico.license
